2002-02-18  Daniel Jacobowitz  <drow@mvista.com>

	* ld-elfvsb/sh1.c: Fix typo in last change.

2002-02-17  Daniel Jacobowitz  <drow@mvista.com>

	* ld-elfvsb/sh1.c: Use #pragma weak.

2002-02-17  Daniel Jacobowitz  <drow@mvista.com>

	* vers.exp: Do not call diff -q.

2002-02-18  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* ld-selective/selective.exp: Link against libgcc on
	hppa*-*-linux* targets.

2002-02-17  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-mmix/b-nosym.d, ld-mmix/sec-6.d: Tweak for change in symbol
	output.
	* ld-mmix/sec-7m.d, ld-mmix/sec-7a.s, ld-mmix/sec-7b.s,
	ld-mmix/sec-7c.s, ld-mmix/sec-7d.s, ld-mmix/sec-7e.s: New test.

2002-02-11  Alexandre Oliva  <aoliva@redhat.com>

	* ld-sh/sh64/reldl64.rd: Add relocation symbol data in info field.
	* ld-sh/sh64/crange-2i.s: Add align to match align in crange-2h.s.
	* ld-sh/sh64/crange3-cmpct.rd: Adjust to reflect modifications
	in section ordering.
	* ld-sh/sh64/crange3-media.rd: Likewise.
	* ld-sh/sh64/crange3.rd: Likewise.
	* ld-sh/sh64/crange3.dd: Likewise.

	* ld-sh/shared-1.d: Fix relocation addend.

2002-02-09  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-mmix/bpo-21.d, ld-mmix/bpo-21m.d, ld-mmix/bpo-11.s: New
	tests.

2002-02-08  Alexandre Oliva  <aoliva@redhat.com>

	Contribute sh64-elf.
	2002-02-02  Alexandre Oliva  <aoliva@redhat.com>
	* ld-sh/sh64/crange3-cmpct.rd: Adjust offsets.
	* ld-sh/sh64/crange3-media.rd: Likewise.
	* ld-sh/sh64/crange3.rd: Likewise.
	* ld-sh/sh64/crangerel1.rd: Likewise.
	* ld-sh/sh64/crangerel2.rd: Likewise.
	* ld-sh/sh64/reldl32.rd: Likewise.
	* ld-sh/sh64/reldl64.rd: Likewise.
	2002-01-28  Alexandre Oliva  <aoliva@redhat.com>
	* ld-sh/sh64/abi32.xd: Formatting changes to match the current
	output of objdump.
	* ld-sh/sh64/cmpct1.xd: Likewise.
	* ld-sh/sh64/crange1.rd: Likewise.
	* ld-sh/sh64/crange2.rd: Likewise.
	* ld-sh/sh64/crange3-cmpct.rd: Likewise.
	* ld-sh/sh64/crange3-media.rd: Likewise.
	* ld-sh/sh64/crange3.rd: Likewise.